--- a/src/assets/scss/mixins/flex.scss
+++ b/src/assets/scss/mixins/flex.scss
@@ -19,7 +19,7 @@
   justify-content: space-between;
 }
 
-@mixin flex-aic-between {
+@mixin flex-all-between {
   display: flex;
   align-items: center;
   justify-content: space-between;
