--- a/src/assets/scss/base/fonts.scss
+++ b/src/assets/scss/base/fonts.scss
@@ -1,4 +1,4 @@
-@include font-face('Inter', 'Inter-Regular', 400);
-@include font-face(Inter, 'Inter-Mediumr', 500);
+@include font-face(Inter, 'Inter-Regular', 400);
+@include font-face(Inter, 'Inter-Medium', 500);
 @include font-face(Inter, 'Inter-SemiBold', 600);
 @include font-face(Inter, 'Inter-Bold', 700);
