--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -2,10 +2,18 @@
   // neutral color
   --neutral-color-10: #fff;
   --neutral-color-20: #f5f5f5;
+  --neutral-color-40: #ced1d8;
   --neutral-color-60: #18181d;
   --neutral-color-100: #1d1e25;
   --neutral-color-120: #828282;
   --neutral-color-130: #d9d9d9;
+  --neutral-color-140: #5c616f;
+
+  // success color
+  --success-color-70: #60d39c;
+
+  // error color
+  --error-color-70: #e35454;
 
   // primary color
   --primary-color-50: #4e7ddb;
