--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -132,12 +132,18 @@
     font-weight: 500;
     line-height: 26px;
     color: var(--neutral-color-100);
+
+    @include small-tablet {
+      font-size: 20px;
+      line-height: 40px;
+    }
   }
 }
 
 .overlay {
   position: fixed;
   inset: 0;
+  z-index: var(--z-index-2);
   background-color: #000000b3;
   opacity: 0;
   visibility: hidden;
