--- a/src/html/components/home/overview.html
+++ b/src/html/components/home/overview.html
@@ -1,41 +1,79 @@
 <section class="overview">
   <div class="container overview__container">
-    <h2 class="overview__title heading-h2">Coca help our client solve complex customer problems with date that does
-      more.</h2>
-    <p class="overview__subtitle text-p-medium">Our platform offers the modern enterprise full control of how date can
-      be access and
-      used with industry leading software solutions for identity, activation, and date collaboration</p>
+    <h2 class="overview__title heading-h2">
+      Coca help our client solve complex customer problems with date that does
+      more.
+    </h2>
+    <p class="overview__subtitle text-p-medium">
+      Our platform offers the modern enterprise full control of how date can be
+      access and used with industry leading software solutions for identity,
+      activation, and date collaboration
+    </p>
 
     <ul class="overview__list">
       <li class="overview__item">
-        <img src="./assets/images/icons/calendar.svg" alt="Calendar icon" class="overview__item-img">
-        <h3 class="overview__item-title heading-h5">Build your date <br /> fundamental</h3>
-        <p class="overview__item-subtitle text-p-default">Build access to date, develop valuable business
-          insights and drive revenue
-          while maintaining full control over access and use of date at all times.</p>
+        <img
+          src="./assets/images/icons/calendar.svg"
+          alt="Calendar icon"
+          class="overview__item-img"
+        />
+        <h3 class="overview__item-title heading-h5">
+          Build your date <br />
+          fundamental
+        </h3>
+        <p class="overview__item-subtitle text-p-default">
+          Build access to date, develop valuable business insights and drive
+          revenue while maintaining full control over access and use of date at
+          all times.
+        </p>
       </li>
       <li class="overview__item">
-        <img src="./assets/images/icons/tablet.svg" alt="Tablet icon" class="overview__item-img">
-        <h3 class="overview__item-title heading-h5">Measure more <br /> effective</h3>
-        <p class="overview__item-subtitle text-p-default">Effectively measure people-based campaigns with the
-          freedom to choose from
-          best-of breed partners to optimize and drive media innovation.</p>
+        <img
+          src="./assets/images/icons/tablet.svg"
+          alt="Tablet icon"
+          class="overview__item-img"
+        />
+        <h3 class="overview__item-title heading-h5">
+          Measure more <br />
+          effective
+        </h3>
+        <p class="overview__item-subtitle text-p-default">
+          Effectively measure people-based campaigns with the freedom to choose
+          from best-of breed partners to optimize and drive media innovation.
+        </p>
       </li>
       <li class="overview__item">
-        <img src="./assets/images/icons/checklist.svg" alt="Checklist icon" class="overview__item-img">
-        <h3 class="overview__item-title heading-h5">Activate your <br /> date</h3>
-        <p class="overview__item-subtitle text-p-default">Accurately address your specific audiences at scale
-          across any channel,
-          platform, publisher or network and safely translate date between identity space to improve results.</p>
+        <img
+          src="./assets/images/icons/checklist.svg"
+          alt="Checklist icon"
+          class="overview__item-img"
+        />
+        <h3 class="overview__item-title heading-h5">
+          Activate your <br />
+          date
+        </h3>
+        <p class="overview__item-subtitle text-p-default">
+          Accurately address your specific audiences at scale across any
+          channel, platform, publisher or network and safely translate date
+          between identity space to improve results.
+        </p>
       </li>
       <li class="overview__item">
-        <img src="./assets/images/icons/shield.svg" alt="Shield icon" class="overview__item-img">
-        <h3 class="overview__item-title heading-h5">Strengthen <br /> consumer privacy</h3>
-        <p class="overview__item-subtitle text-p-default">Protect your customer date with leading
-          privacy-preserving technologies and
-          advanced techniques to minimize date movement while still enabling insight generation.</p>
+        <img
+          src="./assets/images/icons/shield.svg"
+          alt="Shield icon"
+          class="overview__item-img"
+        />
+        <h3 class="overview__item-title heading-h5">
+          Strengthen <br />
+          consumer privacy
+        </h3>
+        <p class="overview__item-subtitle text-p-default">
+          Protect your customer date with leading privacy-preserving
+          technologies and advanced techniques to minimize date movement while
+          still enabling insight generation.
+        </p>
       </li>
-
     </ul>
   </div>
 </section>
