Created features and strength sections

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,3 +6,5 @@
 @import './components/header';
 @import './components/home/hero';
 @import './components/home/overview';
+@import './components/home/features';
+@import './components/home/strength';
