--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -3,11 +3,13 @@
   --neutral-color-10: #fff;
   --neutral-color-20: #f5f5f5;
   --neutral-color-40: #ced1d8;
+  --neutral-color-50: #afb3bb;
   --neutral-color-60: #18181d;
   --neutral-color-100: #1d1e25;
   --neutral-color-120: #828282;
   --neutral-color-130: #d9d9d9;
   --neutral-color-140: #5c616f;
+  --neutral-color-150: #7e8492;
 
   // success color
   --success-color-70: #60d39c;
@@ -20,6 +22,12 @@
 
   // logo
   --logo-circle-color: #1d1e25;
+
+  // testimonials slider buttons
+  --button-arrow-color: #ced1d8;
+  --button-background-color: #1d1e25;
+  --button-hover-color: #5656571b;
+  --button-arrow-hover-color: #000;
 
   // container
   --container-width: 1200px;
@@ -40,4 +48,8 @@
   --neutral-color-10: #1d1e25;
   --neutral-color-100: #fff;
   --logo-circle-color: #343542;
+  --button-arrow-color: #000;
+  --button-arrow-hover-color: #fff;
+
+  // --button-background-color: #fff;
 }
