--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,6 @@
 @import './components/home/overview';
 @import './components/home/features';
 @import './components/home/strength';
+@import './components/home/partners';
+@import './components/home/insights';
+@import './components/home/testimonials';
