Created isights, testimonials, footer, pricing page.

--- a/src/html/components/home/testimonials.html
+++ b/src/html/components/home/testimonials.html
@@ -46,7 +46,8 @@
 
             <div class="testimonials__slide-author">
               <div class="testimonials__slide-author-photo">
-                <img src="./assets/images/testimonials/testimonials-author-1.jpg" alt="Photo of the customer.">
+                <img loading="lazy" src="./assets/images/testimonials/testimonials-author-1.jpg"
+                  alt="Photo of the customer.">
               </div>
               <div class="testimonials__slide-author-info">
                 <span class="testimonials__slide-author-name text-p-medium">Renee Wells</span>
@@ -91,7 +92,8 @@
 
             <div class="testimonials__slide-author">
               <div class="testimonials__slide-author-photo">
-                <img src="./assets/images/testimonials/testimonials-author-1.jpg" alt="Photo of the customer.">
+                <img loading="lazy" src="./assets/images/testimonials/testimonials-author-1.jpg"
+                  alt="Photo of the customer.">
               </div>
               <div class="testimonials__slide-author-info">
                 <span class="testimonials__slide-author-name text-p-medium">Renee Wells</span>
@@ -136,7 +138,8 @@
 
             <div class="testimonials__slide-author">
               <div class="testimonials__slide-author-photo">
-                <img src="./assets/images/testimonials/testimonials-author-1.jpg" alt="Photo of the customer.">
+                <img loading="lazy" src="./assets/images/testimonials/testimonials-author-1.jpg"
+                  alt="Photo of the customer.">
               </div>
               <div class="testimonials__slide-author-info">
                 <span class="testimonials__slide-author-name text-p-medium">Renee Wells</span>
