--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -2,9 +2,11 @@
   // neutral color
   --neutral-color-10: #fff;
   --neutral-color-20: #f5f5f5;
+  --neutral-color-30: #ededed;
   --neutral-color-40: #ced1d8;
   --neutral-color-50: #afb3bb;
   --neutral-color-60: #18181d;
+  --neutral-color-90: #161a34;
   --neutral-color-100: #1d1e25;
   --neutral-color-120: #828282;
   --neutral-color-130: #d9d9d9;
@@ -18,16 +20,20 @@
   --error-color-70: #e35454;
 
   // primary color
+  --primary-color-30: #1463ff;
   --primary-color-50: #4e7ddb;
 
   // logo
   --logo-circle-color: #1d1e25;
 
   // testimonials slider buttons
-  --button-arrow-color: #ced1d8;
   --button-background-color: #1d1e25;
   --button-hover-color: #5656571b;
+  --button-arrow-color: #ced1d8;
   --button-arrow-hover-color: #000;
+
+  // sections
+  --background-color: #1d1e25;
 
   // container
   --container-width: 1200px;
@@ -50,6 +56,7 @@
   --logo-circle-color: #343542;
   --button-arrow-color: #000;
   --button-arrow-hover-color: #fff;
+  --background-color: #18181d;
 
   // --button-background-color: #fff;
 }
