--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,4 @@
 @import './components/home/partners';
 @import './components/home/insights';
 @import './components/home/testimonials';
+@import './components/footer';
