--- a/src/html/components/home/hero.html
+++ b/src/html/components/home/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero hero__decors">
   <div class="container hero__container">
     <div class="hero__content">
       <h2 class="hero__content-title">Digitally forward creative</h2>
@@ -7,12 +7,7 @@
         the world is going
       </p>
       <form class="hero__form">
-        <input
-          type="email"
-          class="hero__form-email"
-          placeholder="Enter your email"
-          required
-        />
+        <input type="email" class="hero__form-email" placeholder="Enter your email" required />
         <button class="hero__form-btn btn">Try for free</button>
       </form>
     </div>
@@ -23,10 +18,7 @@
       </div>
       <div class="hero__img-customer">
         <h3 class="hero__img-customer-title">Customer Growth</h3>
-        <img
-          src="./assets/images/icons/customer-growth-graph.svg"
-          alt="Customer growth graph"
-        />
+        <img src="./assets/images/icons/customer-growth-graph.svg" alt="Customer growth graph" />
       </div>
       <table class="hero__img-stats">
         <thead class="hero__img-stats-header">
@@ -40,15 +32,11 @@
           </tr>
           <tr class="hero__img-stats-tr">
             <td class="hero__img-stats-td">
-              <span class="hero__img-stats-value hero__img-stats-value--green"
-                >4.2%</span
-              >
+              <span class="hero__img-stats-value hero__img-stats-value--green">4.2%</span>
               <span class="hero__img-stats-text">from last year</span>
             </td>
             <td class="hero__img-stats-td">
-              <span class="hero__img-stats-value hero__img-stats-value--red"
-                >1.2%</span
-              >
+              <span class="hero__img-stats-value hero__img-stats-value--red">1.2%</span>
               <span class="hero__img-stats-text">from last year</span>
             </td>
           </tr>
