Added switchPrice js

--- a/src/html/components/pricing/hero.html
+++ b/src/html/components/pricing/hero.html
@@ -5,7 +5,7 @@
       <p class="hero__description">Choose a plan for a more advanced business</p>
       <label class="hero__switcher-wrapper">
         <span class="hero__switcher">
-          <input type="checkbox" class="hero__switcher-checkbox">
+          <input type="checkbox" class="hero__switcher-checkbox" data-price="switcher">
         </span>
         <span class="hero__switcher-text text-p-default">Annual pricing (save 20%)</span>
       </label>
@@ -21,7 +21,8 @@
         <p class="hero__card-description text-p-default">Lorem Ipsum is simply dummy text of the printing and
           typesetting industry.
         </p>
-        <div class="hero__card-price text-p-default"><span class="hero__card-price-value heading-h2">$100</span> /mo
+        <div class="hero__card-price text-p-default"><span class="hero__card-price-value heading-h2"
+            data-price="starter">$100</span> /mo
         </div>
         <ul class="hero__card-list">
           <li class="hero__card-item">What’s included:</li>
@@ -48,7 +49,8 @@
           typesetting industry.
         </p>
         <div class="hero__card-price text-p-default"><span
-            class="hero__card-price-value hero__card-price-value--popular heading-h2">$1400</span> /mo
+            class="hero__card-price-value hero__card-price-value--popular heading-h2" data-price="popular">$1400</span>
+          /mo
         </div>
         <ul class="hero__card-list hero__card-list--popular">
           <li class="hero__card-item hero__card-item--popular">What’s included:</li>
@@ -73,7 +75,8 @@
         <p class="hero__card-description text-p-default">Lorem Ipsum is simply dummy text of the printing and
           typesetting industry.
         </p>
-        <div class="hero__card-price text-p-default"><span class="hero__card-price-value heading-h2">$2100</span> /mo
+        <div class="hero__card-price text-p-default"><span class="hero__card-price-value heading-h2"
+            data-price="enterprise">$2100</span> /mo
         </div>
         <ul class="hero__card-list text-p-default">
           <li class="hero__card-item">What’s included:</li>
