--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -30,6 +30,9 @@
           <li class="nav__item">
             <a href="./pricing.html" class="nav__link text-p-default">Pricing</a>
           </li>
+          <li class="nav__item">
+            <a href="./contacts.html" class="nav__link text-p-default">Contacts</a>
+          </li>
         </ul>
       </nav>
       <label class="switcher header__switcher">
