Changed config stylelint, added contact page

--- a/src/html/components/home/hero.html
+++ b/src/html/components/home/hero.html
@@ -7,7 +7,12 @@
         the world is going
       </p>
       <form class="hero__form">
-        <input type="email" class="hero__form-email" placeholder="Enter your email" required />
+        <input
+          type="email"
+          class="hero__form-email"
+          placeholder="Enter your email"
+          required
+        />
         <button class="hero__form-btn btn">Try for free</button>
       </form>
     </div>
@@ -18,7 +23,10 @@
       </div>
       <div class="hero__img-customer">
         <h3 class="hero__img-customer-title">Customer Growth</h3>
-        <img src="./assets/images/icons/customer-growth-graph.svg" alt="Customer growth graph" />
+        <img
+          src="./assets/images/icons/customer-growth-graph.svg"
+          alt="Customer growth graph"
+        />
       </div>
       <table class="hero__img-stats">
         <thead class="hero__img-stats-header">
@@ -32,11 +40,15 @@
           </tr>
           <tr class="hero__img-stats-tr">
             <td class="hero__img-stats-td">
-              <span class="hero__img-stats-value hero__img-stats-value--green">4.2%</span>
+              <span class="hero__img-stats-value hero__img-stats-value--green"
+                >4.2%</span
+              >
               <span class="hero__img-stats-text">from last year</span>
             </td>
             <td class="hero__img-stats-td">
-              <span class="hero__img-stats-value hero__img-stats-value--red">1.2%</span>
+              <span class="hero__img-stats-value hero__img-stats-value--red"
+                >1.2%</span
+              >
               <span class="hero__img-stats-text">from last year</span>
             </td>
           </tr>
