--- a/src/html/components/home/strength.html
+++ b/src/html/components/home/strength.html
@@ -26,14 +26,21 @@
         </p>
       </li>
     </ul>
-    <img loading="lazy" src="./assets/images/strength/team-photo.jpg" alt="Team photo where everyone stay in a round"
-      class="strength__team-img">
+    <img
+      loading="lazy"
+      src="./assets/images/strength/team-photo.jpg"
+      alt="Team photo where everyone stay in a round"
+      class="strength__team-img"
+    />
     <div class="strength__info">
-      <h2 class="strength__info-title heading-h2">Lift your business to new heights with our digital marketing services
+      <h2 class="strength__info-title heading-h2">
+        Lift your business to new heights with our digital marketing services
       </h2>
-      <p class="strength__info-description text-p-medium">To build software that gives customer facing teams in small
-        and medium-sized
-        businesses the ability to create rewarding and long-lasting relationships with customers</p>
+      <p class="strength__info-description text-p-medium">
+        To build software that gives customer facing teams in small and
+        medium-sized businesses the ability to create rewarding and long-lasting
+        relationships with customers
+      </p>
     </div>
   </div>
 </section>
