--- a/src/scss/components/contacts/contact-us.scss
+++ b/src/scss/components/contacts/contact-us.scss
@@ -1,18 +1,54 @@
 .contact-us {
+  margin-bottom: 85px;
+
+  @include mini-desktop {
+    margin-bottom: 30px;
+  }
+
   &__title {
     margin-bottom: 82px;
     max-width: 741px;
     font-weight: 700;
     letter-spacing: -0.04em;
     color: var(--neutral-color-100);
+
+    @include small-tablet {
+      font-size: 42px;
+    }
+
+    @include mobile {
+      font-size: 32px;
+    }
+
+    @include small-mobile {
+      font-size: 28px;
+    }
   }
 
   &__map {
     @include flex-justify-between;
+    gap: 35px;
+
+    @include mini-desktop {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__contacts {
     max-width: 176px;
+
+    @include mini-desktop {
+      @include flex-justify-center;
+      gap: 32px;
+      max-width: none;
+    }
+
+    @include small-tablet {
+      flex-direction: column;
+      text-align: center;
+      gap: 0;
+    }
 
     &-item {
       border-bottom: 1px solid var(--neutral-color-50);
@@ -20,6 +56,17 @@
 
       &:not(:last-child) {
         margin-bottom: 40px;
+      }
+
+      @include mini-desktop {
+        padding-bottom: 0;
+        border-bottom: none;
+        max-width: 450px;
+      }
+
+      @include small-tablet {
+        border-bottom: 1px solid var(--neutral-color-50);
+        padding-bottom: 32px;
       }
 
       &-title {
