--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -5,4 +5,6 @@
 // components
 @import './components/header';
 @import './components/contacts/contact-us';
+@import './components/partners';
+@import './components/contacts/get-started';
 @import './components/footer';
