Added contacts adaptive

--- a/src/html/components/contacts/get-started.html
+++ b/src/html/components/contacts/get-started.html
@@ -37,14 +37,11 @@
             placeholder="you@company.com"
           />
         </label>
-        <label type="tel" class="get-started__form-label text-p-small">
+        <label class="get-started__form-label text-p-small">
           <span class="get-started__form-label-text">Phone number</span>
-          <input
-            class="get-started__form-input"
-            placeholder="+1 (555) 000-0000"
-          />
+          <input type="tel" id="phone" class="get-started__form-input" />
         </label>
-        <label type="tel" class="get-started__form-label text-p-small">
+        <label class="get-started__form-label text-p-small">
           <span class="get-started__form-label-text">Message</span>
           <textarea
             class="get-started__form-input get-started__form-input--textarea"
