--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -9,7 +9,9 @@
         </p>
       </div>
 
-      <button class="btn footer__top-btn">Try for free</button>
+      <a href="./contacts.html#get-started" class="btn footer__top-btn"
+        >Try for free</a
+      >
     </div>
     <div class="footer__middle">
       <div class="footer__middle-logo">
@@ -27,7 +29,9 @@
               <a href="#" class="footer__middle-inner-link">About</a>
             </li>
             <li class="footer__middle-inner-item">
-              <a href="#" class="footer__middle-inner-link">Pricing</a>
+              <a href="./pricing.html" class="footer__middle-inner-link"
+                >Pricing</a
+              >
             </li>
             <li class="footer__middle-inner-item">
               <a href="#" class="footer__middle-inner-link">Jobs</a>
