--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="overlay"></div>
   <div class="container header__container">
-    <a href="/" class="header__logo">
+    <a href="./index.html" class="header__logo">
       <svg
         width="140.000000"
         height="66.000000"
