Fixed contact links style

--- a/src/scss/components/contacts/contact-us.scss
+++ b/src/scss/components/contacts/contact-us.scss
@@ -82,6 +82,10 @@
         line-height: 1.5;
         color: var(--neutral-color-150);
       }
+
+      &-link {
+        color: var(--neutral-color-100);
+      }
     }
   }
 }
